--- a/gifts/templates/gifts/footer.html
+++ b/gifts/templates/gifts/footer.html
@@ -10,10 +10,10 @@
             <div class="col l3 s12">
                 <h5 class="white-text">Navigation</h5>
                 <ul>
-                    <li><a class="grey-text text-lighten-3" href="{% url 'register' %}">Sign up</a></li>
-                    <li><a class="grey-text text-lighten-3" href="{% url 'login' %}">Log in</a></li>
-                    <li><a class="grey-text text-lighten-3" href="mailto:giftlygroups@gmail.com">Contact</a></li>
-                    <li><a class="modal-trigger grey-text text-lighten-3" href="#DonationModal">Donate</a></li>
+                    <li><a class="grey-text text-lighten-3" href="{% url 'index' %}">Home</a></li>
+                    <li><a class="grey-text text-lighten-3" href="{% url 'edit_profile' %}">Edit Profile</a></li>
+                    <li><a class="grey-text text-lighten-3" href="{% url 'view_groups' %}">Groups</a></li>
+                    <li><a class="grey-text text-lighten-3" href="{% url 'view_all_gifts' %}">Gifts</a></li>
                 </ul>
             </div>
             <div class="col l3 offset-l2 s12">
