--- a/gifts/templates/gifts/index.html
+++ b/gifts/templates/gifts/index.html
@@ -22,7 +22,7 @@
                     birthdays for you. All you need to do is select your desired notice period</h6>
             </div>
         </li> -->
-    <li>
+    <!-- <li>
       <img src="{% static 'gifts/images/header-image2.jpg' %}" />
       <div class="caption right-align">
         <h3>Let your captain do the rest</h3>
@@ -31,7 +31,7 @@
           for you.
         </h6>
       </div>
-    </li>
+    </li> -->
   </ul>
 </div>
 <!-- End Section Slider -->
@@ -95,10 +95,10 @@
         <div class="card small">
           <div class="card-image">
             <img src="{% static 'gifts/images/gift-purple.jpg'%}" alt="" />
-            <span class="card-title black-text">Something</span>
+            <span class="card-title black-text">Setup</span>
           </div>
           <div class="card-content">
-            I am a very short piece of text, and I don't say anything
+            Create a profile, create/join a group and invite your friends. Make sure to fill in your birthday.
           </div>
         </div>
       </div>
@@ -107,10 +107,10 @@
         <div class="card small">
           <div class="card-image">
             <img src="{% static 'gifts/images/gift-holding.jpg'%}" alt="" />
-            <span class="card-title white-text">Something</span>
+            <span class="card-title white-text">Gifting</span>
           </div>
           <div class="card-content">
-            I am a very short piece of text, and I don't say anything
+            Giftly Groups will identify when there are birthdays coming up and setup the gift for you.
           </div>
         </div>
       </div>
@@ -119,10 +119,10 @@
         <div class="card small">
           <div class="card-image">
             <img src="{% static 'gifts/images/gift-green.jpg'%}" alt="" />
-            <span class="card-title black-text">Something</span>
+            <span class="card-title white-text">Donate</span>
           </div>
           <div class="card-content">
-            I am a very short piece of text, and I don't say anything
+            Help keep Giftly Groups running by <a class="modal-trigger" href="#DonationModal">buying the devs a coffee</a>.
           </div>
         </div>
       </div>
