--- a/gifts/templates/gifts/header.html
+++ b/gifts/templates/gifts/header.html
@@ -101,7 +101,7 @@
       </ul>
 
       <ul class="right hide-on-med-and-down">
-        {% if user.is_authenticated %}
+        {% if request.user.is_authenticated %}
         <li {% if page_name == 'edit_profile'%}class="active" {% endif %}><a href=" {% url 'edit_profile' %}">Edit
             Profile</a></li>
         <li><a href="{% url 'logout' %}">Logout</a></li>
@@ -137,6 +137,8 @@
   <li><a href="{% url 'view_groups' %}">Groups</a></li>
   <li><a class="dropdown-trigger" data-target="giftDropdownMobile">Gifts</a></li>
   {% if user.is_authenticated %}
+  <li><a href=" {% url 'edit_profile' %}">Edit
+            Profile</a></li>
   <li><a href="{% url 'logout' %}">Logout</a></li>
   {% endif %}
 </ul>
