--- a/gifts/templates/gifts/base.html
+++ b/gifts/templates/gifts/base.html
@@ -15,7 +15,7 @@
     {% block head_links %} {% endblock %}
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="shortcut icon" href="{% static 'gifts/images/favicon.png' %}" />
 
 </head>
 
