patrick-QA-feedback

--- a/gifts/templates/gifts/edit_profile.html
+++ b/gifts/templates/gifts/edit_profile.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="center-align">
                       <p><strong>Bank Account Details:</strong><br> <span class="small-text">These are optional, and will only be shown to those you are expecting money from</span></p>
-                    <a class="btn center-align" onclick="set_dummy_bank_details();">I'd prefer not to give my bank details</a></div>
+                    <a class="btn center-align" onclick="set_dummy_bank_details();">Skip bank details</a></div>
                     <br>
                     <div class="input-field">
                       {{form.bank_account_name}}
