--- a/gifts/templates/gifts/index.html
+++ b/gifts/templates/gifts/index.html
@@ -55,7 +55,7 @@
           <div class="card-panel small hoverable">
             <i class="fas fa-user-plus large teal-text"></i>
             <h4>Register</h4>
-            <p>Create an account and complete your profile to get get gifting</p>
+            <p>Create an account and complete your profile to get gifting</p>
           </div>
         </a>
         {% endif %}
