--- a/gifts/templates/gifts/view_groups.html
+++ b/gifts/templates/gifts/view_groups.html
@@ -44,7 +44,7 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="card-icon-container"><i class="{{group.icon}} card-icon site-purple"></i></div>
-                        <h5 class="card-title" style="white-space: nowrap;">{{group.name}}</h5>
+                        <h5 class="card-title wordwrap">{{group.name}}</h5>
                         <small style="position: absolute" class="card-text">{{group.members_total}}
                             member{% if group.members_total > 1 %}s{% endif %}</small>
                     </div>
