--- a/gifts/templates/gifts/base.html
+++ b/gifts/templates/gifts/base.html
@@ -24,8 +24,10 @@
 
     {% include 'gifts/header.html'%}
 
-    {% block content %}
-    {% endblock %}
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
     {% include 'gifts/footer.html'%}
 
     <!-- Invitation Modals -->
