--- a/gifts/templates/gifts/header.html
+++ b/gifts/templates/gifts/header.html
@@ -1,154 +1,156 @@
 {% load static %}
 
-<!-- Invitation Dropdowns -->
-<ul id="inviteDropdown" class="dropdown-content">
-  {% for invitation in gift_group_invitations %}
-  <li id="invitationItem{{invitation.id}}">
-    <a class="modal-trigger" href="#inviteModal{{invitation.id}}"><i class="purple-text {{invitation.gift_group.icon}}"></i>{{ invitation.gift_group.name }}</a>
-  </li>
-  {% endfor %}
-</ul>
+<header>
+  <!-- Invitation Dropdowns -->
+  <ul id="inviteDropdown" class="dropdown-content">
+    {% for invitation in gift_group_invitations %}
+    <li id="invitationItem{{invitation.id}}">
+      <a class="modal-trigger" href="#inviteModal{{invitation.id}}"><i class="purple-text {{invitation.gift_group.icon}}"></i>{{ invitation.gift_group.name }}</a>
+    </li>
+    {% endfor %}
+  </ul>
 
-<ul id="inviteDropdownMobile" class="dropdown-content">
-  {% for invitation in gift_group_invitations %}
-  <li id="invitationItemMobile{{invitation.id}}">
-    <a class="modal-trigger" href="#inviteModal{{invitation.id}}"><i class="purple-text {{invitation.gift_group.icon}}"></i>{{ invitation.gift_group.name }}</a>
-  </li>
-  {% endfor %}
-</ul>
-<!-- End Invitation Dropdowns -->
+  <ul id="inviteDropdownMobile" class="dropdown-content">
+    {% for invitation in gift_group_invitations %}
+    <li id="invitationItemMobile{{invitation.id}}">
+      <a class="modal-trigger" href="#inviteModal{{invitation.id}}"><i class="purple-text {{invitation.gift_group.icon}}"></i>{{ invitation.gift_group.name }}</a>
+    </li>
+    {% endfor %}
+  </ul>
+  <!-- End Invitation Dropdowns -->
 
-<!-- Comment dropdown -->
+  <!-- Comment dropdown -->
 
-<ul id="notificationDropdown" class="dropdown-content">
-  <li><a class="purple-text" onclick="mark_notifications_as_read();">Mark all as read<span class="material-icons right dropdown-icon" onclick="mark_notification_as_read(e);">mark_email_read</span></a></li>
-  {% for notification in notifications %}
-  <li id="notificationItem{{notification.id}}">
-    {% if notification.get_url_type == "gift" %}
-      <a class="small-text-dropdown" href="{% url 'view_gift' notification.comment.gift.id %}#comment-section">{{ notification.comment }}
-        <span class="material-icons right dropdown-icon">markunread</span>
-      </a>
-    {% elif notification.get_url_type == "group" %}
-      <a class="small-text-dropdown" href="{% url 'view_individual_group' notification.comment.group.id %}#comment-section">{{ notification.comment }}
-        <span class="material-icons right dropdown-icon">markunread</span>
-      </a>
-    {% endif %}
-  </li>
-  {% endfor %}
-</ul>
-
-<ul id="notificationDropdownMobile" class="dropdown-content">
-  <li><a class="purple-text" onclick="mark_notifications_as_read();">Mark all as read<span class="material-icons right dropdown-icon" onclick="mark_notification_as_read(e);">mark_email_read</span></a></li>
-  {% for notification in notifications %}
-  <li id="notificationItem{{notification.id}}">
+  <ul id="notificationDropdown" class="dropdown-content">
+    <li><a class="purple-text" onclick="mark_notifications_as_read();">Mark all as read<span class="material-icons right dropdown-icon" onclick="mark_notification_as_read(e);">mark_email_read</span></a></li>
+    {% for notification in notifications %}
+    <li id="notificationItem{{notification.id}}">
       {% if notification.get_url_type == "gift" %}
-        <a class="small-text-dropdown" href="{% url 'view_gift' notification.comment.gift.id %}#comment-section">{{ notification.comment }}</a>
+        <a class="small-text-dropdown" href="{% url 'view_gift' notification.comment.gift.id %}#comment-section">{{ notification.comment }}
+          <span class="material-icons right dropdown-icon">markunread</span>
+        </a>
       {% elif notification.get_url_type == "group" %}
-        <a class="small-text-dropdown" href="{% url 'view_individual_group' notification.comment.group.id %}#comment-section">{{ notification.comment }}</a>
+        <a class="small-text-dropdown" href="{% url 'view_individual_group' notification.comment.group.id %}#comment-section">{{ notification.comment }}
+          <span class="material-icons right dropdown-icon">markunread</span>
+        </a>
       {% endif %}
-  </li>
-  {% endfor %}
-</ul>
-<!-- End Comment Dropdown -->
+    </li>
+    {% endfor %}
+  </ul>
 
-<!-- Gift Dropdowns -->
-<ul id="giftDropdown" class="dropdown-content">
-  {% if active_gifts %}
-  {% for gift in active_gifts %}
-  <li id="giftDropdownItem{{gift.id}}">
-    <a href="{% url 'view_gift' gift.id %}">{{ gift.receiver.first_name }} {{gift.receiver.last_name}}</a>
-  </li>
-  {% endfor %}
-  {% elif not request.user.is_authenticated %}
-  <li>
-    <a href="{% url 'register' %}">Create an account</a>
-  </li>
-  {% else %}
-  <li><a>No active gifts</a></li>
-  {% endif %}
-</ul>
-
-<ul id="giftDropdownMobile" class="dropdown-content">
-  {% if active_gifts %}
-  {% for gift in active_gifts %}
-  <li id="giftDropdownItem{{gift.id}}">
-    <a href="{% url 'view_gift' gift.id %}">{{ gift.receiver.first_name }} {{gift.receiver.last_name}}</a>
-  </li>
-  {% endfor %}
-  {% elif not request.user.is_authenticated %}
-  <li>
-    <a href="{% url 'register' %}">Create an account</a>
-  </li>
-  {% else %}
-  <li><a>No active gifts</a></li>
-  {% endif %}
-</ul>
-<!-- End Gift Dropdowns -->
-
-<div class="navbar-fixed">
-  <nav class="grey darken-2">
-    <div class="nav-wrapper">
-      <a href="{% url 'index' %}" class="brand-logo center">
-        Giftly Groups</a>
-      <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-      <ul class="left hide-on-med-and-down">
-        <li {% if page_name == 'groups'%} class="active" {% endif %}><a href="{% url 'view_groups' %}">Groups</a></li>
-        <li {% if page_name == 'gifts'%} class="active" {% endif %}><a id="gift_drop_trigger" class="dropdown-trigger" data-target="giftDropdown">Gifts</a></li>
-        {% if gift_group_invitations.count > 0 %} 
-        <li>
-          <a class="dropdown-trigger" href="#!" data-target="inviteDropdown">Invitations<i
-              class="material-icons right">arrow_drop_down</i>
-            <span id="invitationCounter" class="new badge">{{gift_group_invitations.count}}</span></a>
-        </li>
+  <ul id="notificationDropdownMobile" class="dropdown-content">
+    <li><a class="purple-text" onclick="mark_notifications_as_read();">Mark all as read<span class="material-icons right dropdown-icon" onclick="mark_notification_as_read(e);">mark_email_read</span></a></li>
+    {% for notification in notifications %}
+    <li id="notificationItem{{notification.id}}">
+        {% if notification.get_url_type == "gift" %}
+          <a class="small-text-dropdown" href="{% url 'view_gift' notification.comment.gift.id %}#comment-section">{{ notification.comment }}</a>
+        {% elif notification.get_url_type == "group" %}
+          <a class="small-text-dropdown" href="{% url 'view_individual_group' notification.comment.group.id %}#comment-section">{{ notification.comment }}</a>
         {% endif %}
-        {% if notifications %}
-        <li id="notifications-nav">
-          <a id="notification_drop_trigger" class="dropdown-trigger" href="#!" data-target="notificationDropdown">Notifications<i
-              class="material-icons right">arrow_drop_down</i>
-            <span id="invitationCounter" class="new badge">{{notifications|length}}</span></a>
-        </li>
-        {% endif %}
-      </ul>
+    </li>
+    {% endfor %}
+  </ul>
+  <!-- End Comment Dropdown -->
 
-      <ul class="right hide-on-med-and-down">
-        {% if request.user.is_authenticated %}
-        <li {% if page_name == 'edit_profile'%}class="active" {% endif %}><a href=" {% url 'edit_profile' %}">Edit
-            Profile</a></li>
-        <li><a href="{% url 'logout' %}">Logout</a></li>
-        {% else %}
-        <li {% if page_name == "register" %} class="active" {% endif %}><a href="{% url 'register' %}">Sign up</a></li>
-        <li {% if "login" in request.path %}class="active" {% endif %}><a href="{% url 'login' %}">Log in</a></li>
-        {% endif %}
-      </ul>
-    </div>
-  </nav>
-</div>
+  <!-- Gift Dropdowns -->
+  <ul id="giftDropdown" class="dropdown-content">
+    {% if active_gifts %}
+    {% for gift in active_gifts %}
+    <li id="giftDropdownItem{{gift.id}}">
+      <a href="{% url 'view_gift' gift.id %}">{{ gift.receiver.first_name }} {{gift.receiver.last_name}}</a>
+    </li>
+    {% endfor %}
+    {% elif not request.user.is_authenticated %}
+    <li>
+      <a href="{% url 'register' %}">Create an account</a>
+    </li>
+    {% else %}
+    <li><a>No active gifts</a></li>
+    {% endif %}
+  </ul>
 
-<ul class="sidenav" id="mobile-nav">
-  {% if not user.is_authenticated %}
-  <li><a href="{% url 'register' %}">Sign up</a></li>
-  <li><a href="{% url 'login' %}">Log in</a></li>
-  {% endif %} 
-  {% if gift_group_invitations.count > 0 %}
-  <li>
-    <a class="dropdown-trigger" data-target="inviteDropdownMobile">Invitations
-      <span class="new badge">{{gift_group_invitations.count}}</span></a>
-  </li>
-  {% endif %}
+  <ul id="giftDropdownMobile" class="dropdown-content">
+    {% if active_gifts %}
+    {% for gift in active_gifts %}
+    <li id="giftDropdownItem{{gift.id}}">
+      <a href="{% url 'view_gift' gift.id %}">{{ gift.receiver.first_name }} {{gift.receiver.last_name}}</a>
+    </li>
+    {% endfor %}
+    {% elif not request.user.is_authenticated %}
+    <li>
+      <a href="{% url 'register' %}">Create an account</a>
+    </li>
+    {% else %}
+    <li><a>No active gifts</a></li>
+    {% endif %}
+  </ul>
+  <!-- End Gift Dropdowns -->
 
-    {% if notifications %}
-    <li id="notfications-nav-mobile">
-      <a class="dropdown-trigger" href="#!" data-target="notificationDropdownMobile">Notifications<i
-          class="material-icons right">arrow_drop_down</i>
-        <span id="invitationCounter" class="new badge">{{notifications|length}}</span></a>
+  <div class="navbar-fixed">
+    <nav class="grey darken-2">
+      <div class="nav-wrapper">
+        <a href="{% url 'index' %}" class="brand-logo center">
+          Giftly Groups</a>
+        <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <ul class="left hide-on-med-and-down">
+          <li {% if page_name == 'groups'%} class="active" {% endif %}><a href="{% url 'view_groups' %}">Groups</a></li>
+          <li {% if page_name == 'gifts'%} class="active" {% endif %}><a id="gift_drop_trigger" class="dropdown-trigger" data-target="giftDropdown">Gifts</a></li>
+          {% if gift_group_invitations.count > 0 %} 
+          <li>
+            <a class="dropdown-trigger" href="#!" data-target="inviteDropdown">Invitations<i
+                class="material-icons right">arrow_drop_down</i>
+              <span id="invitationCounter" class="new badge">{{gift_group_invitations.count}}</span></a>
+          </li>
+          {% endif %}
+          {% if notifications %}
+          <li id="notifications-nav">
+            <a id="notification_drop_trigger" class="dropdown-trigger" href="#!" data-target="notificationDropdown">Notifications<i
+                class="material-icons right">arrow_drop_down</i>
+              <span id="invitationCounter" class="new badge">{{notifications|length}}</span></a>
+          </li>
+          {% endif %}
+        </ul>
+
+        <ul class="right hide-on-med-and-down">
+          {% if request.user.is_authenticated %}
+          <li {% if page_name == 'edit_profile'%}class="active" {% endif %}><a href=" {% url 'edit_profile' %}">Edit
+              Profile</a></li>
+          <li><a href="{% url 'logout' %}">Logout</a></li>
+          {% else %}
+          <li {% if page_name == "register" %} class="active" {% endif %}><a href="{% url 'register' %}">Sign up</a></li>
+          <li {% if "login" in request.path %}class="active" {% endif %}><a href="{% url 'login' %}">Log in</a></li>
+          {% endif %}
+        </ul>
+      </div>
+    </nav>
+  </div>
+
+  <ul class="sidenav" id="mobile-nav">
+    {% if not user.is_authenticated %}
+    <li><a href="{% url 'register' %}">Sign up</a></li>
+    <li><a href="{% url 'login' %}">Log in</a></li>
+    {% endif %} 
+    {% if gift_group_invitations.count > 0 %}
+    <li>
+      <a class="dropdown-trigger" data-target="inviteDropdownMobile">Invitations
+        <span class="new badge">{{gift_group_invitations.count}}</span></a>
     </li>
     {% endif %}
 
-  <li><a href="{% url 'view_groups' %}">Groups</a></li>
-  <li><a class="dropdown-trigger" data-target="giftDropdownMobile">Gifts</a></li>
-  {% if user.is_authenticated %}
-  <li><a href=" {% url 'edit_profile' %}">Edit
-            Profile</a></li>
-  <li><a href="{% url 'logout' %}">Logout</a></li>
-  {% endif %}
-</ul>
+      {% if notifications %}
+      <li id="notfications-nav-mobile">
+        <a class="dropdown-trigger" href="#!" data-target="notificationDropdownMobile">Notifications<i
+            class="material-icons right">arrow_drop_down</i>
+          <span id="invitationCounter" class="new badge">{{notifications|length}}</span></a>
+      </li>
+      {% endif %}
+
+    <li><a href="{% url 'view_groups' %}">Groups</a></li>
+    <li><a class="dropdown-trigger" data-target="giftDropdownMobile">Gifts</a></li>
+    {% if user.is_authenticated %}
+    <li><a href=" {% url 'edit_profile' %}">Edit
+              Profile</a></li>
+    <li><a href="{% url 'logout' %}">Logout</a></li>
+    {% endif %}
+  </ul>
+</header>
