--- a/uac/templates/registration/login.html
+++ b/uac/templates/registration/login.html
@@ -45,6 +45,7 @@ Login Here
             {% endfor %}
             {% endif %}
 
+               <a href="{% url 'reset_password' %}" class="left"><p>Forgot Password?</p></a>
                <p class="right">Don't have an account? <a href="{% url 'register' %}">Register</a></p>
                <input type="submit" name="submit" value="log in" class="btn left col s12">
                <div class="clearfix"></div>
