--- a/gifts/templates/gifts/components/birthday_calendar.html
+++ b/gifts/templates/gifts/components/birthday_calendar.html
@@ -22,30 +22,15 @@
 
 <div class="row">
   <div class="col l6 card-panel">
-    <table class="calendar">
+    <table class="calendar" id="calendar">
       <div class="center-align">
         <button id="left-button"><i class="material-icons inline-icon">keyboard_arrow_left</i></button>
         <span id="monthName"></span>
         <button id="right-button"><i class="material-icons inline-icon">keyboard_arrow_right</i></button>
       </div>
-      <tr>
-        <td>S</td>
-        <td>M</td>
-        <td>T</td>
-        <td>W</td>
-        <td>T</td>
-        <td>F</td>
-        <td>S</td>
-      </tr>
-      <tr>
-        <td>01</td>
-        <td>02</td>
-        <td> <span class="birthday">03</span></td>
-        <td>04</td>
-        <td>05</td>
-        <td>06</td>
-        <td>07</td>
-      </tr>
+      <tbody id="calendarBody">
+        
+      </tbody>
     </table>
   </div>
 </div>
