--- a/gifts/templates/gifts/components/birthday_calendar.html
+++ b/gifts/templates/gifts/components/birthday_calendar.html
@@ -1,41 +1,39 @@
-{% extends 'gifts/base.html' %}
 {% load static %}
 
+<table class="calendar" id="calendar">
+  <div class="center-align">
+    <button id="left-button"><i class="material-icons inline-icon">keyboard_arrow_left</i></button>
+    <span style="width:30%; display:inline-block;" id="monthName"></span>
+    <button id="right-button"><i class="material-icons inline-icon">keyboard_arrow_right</i></button>
+  </div>
+  <tbody id="calendarBody">
+    
+  </tbody>
+</table>
 
-{% block content %}
-
-<style>
-  .birthday {
-    background-color: rgba(3, 248, 252, 0.4);
-    border: 3px solid rgba(3, 248, 252, 0.4);
-    border-radius: 50%;
-  }
-
-  .inline-icon{
-    vertical-align: bottom;
-  }
-
-  .calendar td {
-    text-align: center;
-  }
-</style>
-
-<div class="row">
-  <div class="col l6 card-panel">
-    <table class="calendar" id="calendar">
-      <div class="center-align">
-        <button id="left-button"><i class="material-icons inline-icon">keyboard_arrow_left</i></button>
-        <span id="monthName"></span>
-        <button id="right-button"><i class="material-icons inline-icon">keyboard_arrow_right</i></button>
-      </div>
-      <tbody id="calendarBody">
-        
-      </tbody>
-    </table>
+{% for date, people in birthdays_dict.items %}
+<div id="bdayModal{{date|date:'Y-n-j'}}" class="modal">
+  <div class="modal-content center-align">
+    <h4>{{date|date:'d M Y'}}</h4>
+    {% for person in people %}
+    <div>
+      <i class="material-icons birthday-icon">cake</i><p class="birthday-name">{{person}}</p>
+    </div>
+    {% endfor %}
+  </div>
+  <div class="modal-footer">
+    <a href="#!" class="modal-close waves-effect waves-light btn">close</a>
   </div>
 </div>
-{% endblock %}
+{% endfor %}
+
 
 {% block end_scripts %}
+<script>
+  let birthdays = []
+  "{% for day in birthdays %}"
+    birthdays.push("{{day}}");
+  "{% endfor %}"
+</script>
 <script src="{% static 'gifts/js/calendar.js' %}"></script>
 {% endblock %}
