--- a/gifts/templates/gifts/view_individual_group.html
+++ b/gifts/templates/gifts/view_individual_group.html
@@ -1,6 +1,10 @@
 {% extends 'gifts/base.html' %}
 {% load static %}
 
+{% block head_links %}
+<link rel="stylesheet" type="text/css" href="{% static 'gifts/css/calendar.css' %}">
+{% endblock %}
+
 {% block content %}
 
 <div class="content container">
@@ -14,8 +18,14 @@
       <a href="{% url 'leave_group' group.id %}"><button class="btn red">Leave group</button></a>
   </div>
 
+  <div class="row">
+    <div class="col s12 offset-m2 offset-m2 m8 card-panel">
+  {% include 'gifts/components/birthday_calendar.html' %}
+    </div>
+  </div>
+
     <div class="row">
-        <div class="col s12 offset-m2 m8" id="gifts-collection">
+        <div class="col s12 offset-m2 offset-m2 m8" id="gifts-collection">
             {{group_gifts_component}}
         </div>
 
