fix calendar bug

--- a/gifts/templates/gifts/components/birthday_calendar.html
+++ b/gifts/templates/gifts/components/birthday_calendar.html
@@ -6,6 +6,9 @@
     <span style="width:30%; display:inline-block;" id="monthName"></span>
     <button id="right-button"><i class="material-icons inline-icon">keyboard_arrow_right</i></button>
   </div>
+  <thead style="font-weight: bold;">
+    <tr><td>S</td><td>M</td><td>T</td><td>W</td><td>T</td><td>F</td><td>S</td></tr>
+  </thead>
   <tbody id="calendarBody">
     
   </tbody>
