add master calendar

--- a/gifts/templates/gifts/components/birthday_calendar.html
+++ b/gifts/templates/gifts/components/birthday_calendar.html
@@ -3,7 +3,7 @@
 <table class="calendar" id="calendar">
   <div class="center-align">
     <button id="left-button"><i class="material-icons inline-icon">keyboard_arrow_left</i></button>
-    <span style="width:30%; display:inline-block;" id="monthName"></span>
+    <strong><span style="width:30%; display:inline-block;" id="monthName"></span></strong>
     <button id="right-button"><i class="material-icons inline-icon">keyboard_arrow_right</i></button>
   </div>
   <thead style="font-weight: bold;">
