--- a/gifts/templates/gifts/index.html
+++ b/gifts/templates/gifts/index.html
@@ -93,12 +93,25 @@
 <section class="section section-image-row">
   <div class="container">
     <div class="row">
-      <h4 class="center">How It Works</h4>
+      <h4 class="center">Extras</h4>
 
+      {% if request.user.is_authenticated %}
       <div class="col s12 m4">
         <div class="card small">
           <div class="card-image">
-            <img src="{% static 'gifts/images/gift-purple.jpg'%}" alt="setup" />
+            <img src="{% static 'gifts/images/gift-red.jpg'%}" alt="setup" />
+            <span class="card-title black-text">Calendar</span>
+          </div>
+          <div class="card-content">
+            Keep track of your friend's upcoming birthdays with your personal <a href="{% url 'master_calendar' %}">calendar</a>.
+          </div>
+        </div>
+      </div>
+      {% else %}
+      <div class="col s12 m4">
+        <div class="card small">
+          <div class="card-image">
+            <img src="{% static 'gifts/images/gift-red.jpg'%}" alt="setup" />
             <span class="card-title black-text">Setup</span>
           </div>
           <div class="card-content">
@@ -106,11 +119,12 @@
           </div>
         </div>
       </div>
+      {% endif %}
 
       <div class="col s12 m4">
         <div class="card small">
           <div class="card-image">
-            <img src="{% static 'gifts/images/gift-holding.jpg'%}" alt="gifting" />
+            <img src="{% static 'gifts/images/brown-gift.jpg'%}" alt="gifting" />
             <span class="card-title white-text">Gifting</span>
           </div>
           <div class="card-content">
@@ -122,7 +136,7 @@
       <div class="col s12 m4">
         <div class="card small">
           <div class="card-image">
-            <img src="{% static 'gifts/images/gift-green.jpg'%}" alt="donate" />
+            <img src="{% static 'gifts/images/donate-gift.jpg'%}" alt="donate" />
             <span class="card-title white-text">Donate</span>
           </div>
           <div class="card-content">
