--- a/gifts/templates/gifts/view_groups.html
+++ b/gifts/templates/gifts/view_groups.html
@@ -35,7 +35,7 @@
 </style>
 
 <div class="content container">
-    <h1>Your Groups</h1>
+    <h1 class="center-align">Your Groups</h1>
 
     <div class="row content-page nav-margin footer-margin">
         {% for group in groups %}
